2008-10-30  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by Beth Dakin.
        
        <rdar://problem/6104369> Hitting return at the end of a quoted line creates an extraneous quoted line

        * editing/inserting/6104369-expected.txt: Added.
        * editing/inserting/6104369.html: Added.

2008-10-30  Pierre-Olivier Latour  <pol@apple.com>

        Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=21821

        Imported new image bases for a representative set of pixel tests in order to
        fully validate latest DRT and test script changes. These results were generated
        by a release build of r38003 on an Intel iMac running Mac OS X 10.5.5 with
        QuickTime 7.5.5.

        (file listing elided)

2008-10-29  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=21921
        MessagePort messages are dispatched to documents that are not fully active

        * fast/events/message-port-inactive-document.html: Protect the document from being
        destructed in a working way (a global variable named "document" didn't do the trick due
        to its name).

2008-10-29  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Sam Weinig.

        https://bugs.webkit.org/show_bug.cgi?id=21922
        Expose MessagePort global constructor

        * fast/dom/Window/window-properties-expected.txt:
        * fast/js/global-constructors-expected.txt:

2008-10-28  Timothy Hatcher  <timothy@apple.com>

        Remove fast/profiler from the skipped list for Tiger since the fix
        for <rdar://problem/6211578> should make things work.

        <rdar://problem/6316530> Profiler tests fail on Tiger

        Reviewed by Kevin McCullough.

        * platform/mac-tiger/Skipped:

2008-10-28  Timothy Hatcher  <timothy@apple.com>

        Update profiler tests to opt-in to profiling and clean up the output.
