@@ -1,0 +1,3 @@
+This tests for a bug where hitting return at the end of a paragraph inside a blockquote would create an extraneous empty quoted paragraph. You should see "line one" (quoted), "" (unquoted), and "line two" (quoted) below.
+<blockquote type="cite"><pre id="pre">line one
+</pre></blockquote><br><blockquote type="cite"><pre id="pre">line two</pre></blockquote>
