@@ -76,18 +76,20 @@ void BreakBlockquoteCommand::doApply()
         rebalanceWhitespace();   
         return;
     }
+    
+    // Don't move a line break just after the caret.  Doing so would create an extra, empty paragraph
+    // in the new blockquote.
+    if (lineBreakExistsAtPosition(visiblePos))
+        pos = pos.next();
         
     // Split at pos if in the middle of a text node.
     if (startNode->isTextNode()) {
-        Text *textNode = static_cast<Text *>(startNode);
+        Text* textNode = static_cast<Text*>(startNode);
         if ((unsigned)pos.offset() >= textNode->length()) {
             startNode = startNode->traverseNextNode();
             ASSERT(startNode);
         } else if (pos.offset() > 0)
             splitTextNode(textNode, pos.offset());
-    } else if (startNode->hasTagName(brTag)) {
-        startNode = startNode->traverseNextNode();
-        ASSERT(startNode);
     } else if (pos.offset() > 0) {
         startNode = startNode->traverseNextNode();
         ASSERT(startNode);
