@@ -1,5 +1,12 @@
 2008-10-30  Justin Garcia  <justin.garcia@apple.com>
 
+        Also handle preserved newlines.
+
+        * editing/BreakBlockquoteCommand.cpp:
+        (WebCore::BreakBlockquoteCommand::doApply):
+
+2008-10-30  Justin Garcia  <justin.garcia@apple.com>
+
         Reviewed by Beth Dakin.
 
         <rdar://problem/6104369> Hitting return at the end of a quoted line creates an extraneous quoted line
